--- a/src/views/dashboards/dashboard/src/screens/DashboardBuilder/style.css
+++ b/src/views/dashboards/dashboard/src/screens/DashboardBuilder/style.css
@@ -1,3 +1,9 @@
+#infoi {
+  padding-left: 25%;
+  padding-top: 25%;
+  z-index: 10;
+}
+
 .dashboard-builder {
   align-items: flex-start;
   background-color: #f4f5fa;
