--- a/src/views/dashboards/dashboard/src/screens/DashboardBuilder/style.css
+++ b/src/views/dashboards/dashboard/src/screens/DashboardBuilder/style.css
@@ -233,7 +233,7 @@
   display: flex;
   justify-content: center;
   min-height: 100vh;
-  overflow: hidden;
+  overflow: visible;
   position: relative;
 }
 
@@ -465,8 +465,9 @@
 }
 
 .dashboard-builder .row-2 {
-  align-items: flex-start;
+  align-items: center;
   align-self: stretch;
+  align-content: space-around;
   display: flex;
   flex: 0 0 auto;
   gap: 24px;
